fixed mobile overflow bug

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -23,6 +23,13 @@
   }
 
 
+#wrapper{
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: fixed;
+}
+
 #time{
 	position: absolute;
 	font-size: 80pt;
